# xMosaic

./: .gitignore  LICENSE  README.md  electrobun.config.ts  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml  test.yml
desktop/bun/: index.ts
desktop/shared/: types.ts
desktop/view/: index.html  index.ts  styles.css
docs/: ARCHITECTURE.md  CODEX_TASKS.md  DATASET.md  MODEL_CARD_TEMPLATE.md  MODEL_TRAINING.md  QUICKSTART.md  RELEASE.md  SAFETY_POLICY.md
examples/: README.md  config.example.yaml
scripts/: install.ps1  install.sh
src/xmosaic/: __init__.py  __main__.py  cli.py  config.py  electrobun_launcher.py  electrobun_worker.py  ffmpeg.py  pipeline.py
src/xmosaic/detection/: __init__.py  base.py  dummy.py  onnx_backend.py  sam2_refiner.py  yolo_seg.py
src/xmosaic/mosaic/: __init__.py  mask_ops.py  renderer.py  temporal.py
src/xmosaic/report/: __init__.py  qc_report.py
src/xmosaic/utils/: __init__.py  system.py
tests/: conftest.py  test_cli.py  test_dummy_detector.py  test_electrobun_worker.py  test_ffmpeg.py  test_mask_ops.py  test_mosaic_renderer.py  test_pipeline.py
