[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xmosaic"
version = "0.1.2"
description = "Local AI-powered adult-region mosaic tool for videos"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Daiki Marui" }
]
keywords = ["video", "mosaic", "computer-vision", "segmentation", "local-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26,<2.3; python_version < '3.13'",
  "numpy>=2.1,<2.3; python_version >= '3.13'",
  "opencv-python>=4.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
ai = [
  "torch>=2.3",
  "torchvision>=0.18",
  "ultralytics>=8.3",
  "onnxruntime>=1.18"
]
cuda = [
  "onnxruntime-gpu>=1.18"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1"
]

[project.scripts]
xmosaic = "xmosaic.cli:main"
xmosaic-gui = "xmosaic.electrobun_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xmosaic"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
